fixed icon alignment issue, started script file, added functionality to form

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -1,3 +1,26 @@
+.button {
+    background-color: $orange;
+    border-radius: 10%;
+    padding: 2%;
+    transition: background-color 0.4s;
+    
+    &:hover {
+        background-color: $blue;
+        
+    }
+
+    i {
+        font-size: 1em;
+        color: $white;
+        margin-right: 0.5em;
+    }
+}
+
+.newLine {
+    display: block;
+}
+
+
 .projects {
     padding: 10%;
 
@@ -15,25 +38,29 @@
     padding: 0.5%;
 }
 
-.project01 {
-    position: relative;
-
-    img {
-        position: absolute;
-        top: -40px;
-    }
-
-}
-
 .project01Description {
-    /* position: relative; */
-    top: 40px; 
     display: flex;
     flex-wrap: wrap;
     flex-direction: column; 
-    justify-content: space-between;
-   /*  align-items: flex-start; */
+    justify-content: space-around;
     width: 54%;
+
+    p {
+        margin-top: 0;
+    }
+
+    .border01 {
+        p {
+            text-align: center;
+        }
+        
+    }
+}
+.projectIconsWrapper {
+    display: inline-block;
+}
+.descriptionIconsButts {
+    display: flex;
 }
 
 .project02 {
