--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -5,8 +5,7 @@ html {
 }
 
 body {
-    /* font-family: $baseFont;
-    color: $white; */
+    font-family: $betaFont;
     background-color: #000;
 }
 
