--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,6 +3,7 @@ $orange: #F06000;
 $yellow: #FFA818;
 $grey: #808080;
 $white: #ECE4DE;
+$blue: #09133e;
 
 
 /* Font Import */
